# backend-trainee

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  load_test.sh  locustfile.py  mypy.ini  openapi.yml  pyproject.toml  requirements.txt  setup.cfg  tests_results.md
app/: main.py
app/api/: health.py  pull_requests.py  statistics.py  teams.py  users.py
app/core/: config.py  exceptions.py
app/database/: base.py
app/models/: __init__.py  pull_request.py  team.py  user.py
app/schemas/: __init__.py  error.py  pull_request.py  statistics.py  team.py  user.py
app/services/: __init__.py  pull_request_service.py  statistics_service.py  team_service.py  user_service.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py
reports_load_tests/: report_2m.html  report_3m.html  report_5m.html
tests/: conftest.py  test_pull_requests.py  test_statistics.py  test_teams.py  test_users.py
